--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,8 +7,7 @@
   <string name="error_message">Unable to retrieve APoD. (%s)</string>
   <string name="information">Information</string>
   <string name="info_ok">Ok</string>
-
-  <!-- TODO: Remove or change this placeholder text -->
-  <string name="hello_blank_fragment">Hello blank fragment</string>
   <string name="title_history">History</string>
+  <string name="access_format">(Last accessed %2$s; accessed %1$d times)</string>
+
 </resources>
