Refactor load to activity (in progress).

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
   <string name="information">Information</string>
   <string name="info_ok">Ok</string>
   <string name="title_history">History</string>
-  <string name="access_format">(Last accessed %2$s; accessed %1$d times)</string>
+  <string name="access_format">(Accessed %1$d %3$s, last on %2$s)</string>
+  <string name="default_description">Default description</string>
 
 </resources>
